added images to html and function for click to addd to score

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Crystal Game</title>
         <link rel="stylesheet" href= "assets/css/reset.css">    
         <link rel="stylesheet" href= "assets/css/style.css">
-        <script src="assets/javascript/game.js"></script>
 
     </head>
     <body>
@@ -13,17 +12,18 @@
         <h3>Number to Guess: <span id="target"></span></h3>
 
         <div id="crystals">
-            <img class="crystal" id="crystal-1" src="...">
+            <img class="crystal" id="crystal-1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQMNL5PaAoekm7rpDAzvnYqCalneUE3rH5w_LbKtaLFPUjQ_Hq" >
 
-            <img class="crystal" id="crystal-2" src="...">
+            <img class="crystal" id="crystal-2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmTDyGaTUFDwWDcxXwIaCd5JSJ6ffo0KS47tAweuZm4dsn9XPM">
 
-            <img class="crystal" id="crystal-3" src="...">
+            <img class="crystal" id="crystal-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuObnteXX6OR4TUIcEwHrowxWTvVS6yxSkX5xDCzRL1vNebdTh">
 
-            <img class="crystal" id="crystal-4" src="...">
+            <img class="crystal" id="crystal-4" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9WDK3Apgaa1OTribrvzJMfZRT6gHBHv7LaWW6kaw9mgwlhIM2">
 
         </div>
 
-        <h3 id="score">Your Score:</h3>
-
+        <h3>Your Score: <span id="score"></span></h3>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="C:/Users/maste/workspace/unit-4-game/assets/javascript/game.js"></script>
     </body>
 </html>
