game rules work small changes to css. added win loss counter

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
 
             <img class="crystal" id="crystal-4" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9WDK3Apgaa1OTribrvzJMfZRT6gHBHv7LaWW6kaw9mgwlhIM2">
 
+            <div><span id="result"></span></div>
         </div>
 
         <h3>Your Score: <span id="score"></span></h3>
+        <h3>Wins: <span id="wins"></span></h3>
+        <h3>Losses: <span id="losses"></span></h3>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="C:/Users/maste/workspace/unit-4-game/assets/javascript/game.js"></script>
     </body>
