added css styling to page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Crystal Game</h1>
         
-        <h3>Number to Guess: <span id="target"></span></h3>
+        <h3 id='NTG'>Number to Guess: <span id="target"></span></h3>
 
         <div id="crystals">
             <img class="crystal" id="crystal-1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQMNL5PaAoekm7rpDAzvnYqCalneUE3rH5w_LbKtaLFPUjQ_Hq" >
@@ -20,12 +20,17 @@
 
             <img class="crystal" id="crystal-4" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9WDK3Apgaa1OTribrvzJMfZRT6gHBHv7LaWW6kaw9mgwlhIM2">
 
-            <div><span id="result"></span></div>
         </div>
 
+        <div id="resultsDiv"><span id="result"></span></div>
+        
+        <div id="stats">
         <h3>Your Score: <span id="score"></span></h3>
         <h3>Wins: <span id="wins"></span></h3>
         <h3>Losses: <span id="losses"></span></h3>
+
+        </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="C:/Users/maste/workspace/unit-4-game/assets/javascript/game.js"></script>
     </body>
