--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="resultsDiv"><span id="result"></span></div>
-        
+
         <div id="stats">
         <h3>Your Score: <span id="score"></span></h3>
         <h3>Wins: <span id="wins"></span></h3>
@@ -32,6 +32,6 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="C:/Users/maste/workspace/unit-4-game/assets/javascript/game.js"></script>
+        <script src="assets/javascript/game.js"></script>
     </body>
 </html>
